# Harmoniq-Studio

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
benches/: Cargo.toml
crates/clap-scanner/: Cargo.toml
crates/clap-scanner/src/: main.rs  probe.rs  scan.rs
crates/clap-sys/: Cargo.toml  UPSTREAM.md  build.rs  clap-headers.sha256
crates/clap-sys/src/: lib.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: filter.rs  lib.rs  oscillator.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: config.rs  engine.rs  latency.rs  lib.rs  scheduler.rs
crates/engine-core/tests/: config.rs
crates/engine-graph/: Cargo.toml
crates/engine-graph/src/: automation.rs  graph.rs  lib.rs  node.rs
crates/engine-graph/tests/: graph.rs
crates/engine-plugin-host/: Cargo.toml
crates/engine-plugin-host/src/: lib.rs
crates/engine-rt/: Cargo.toml
crates/engine-rt/src/: callback.rs  lib.rs  queue.rs  transport.rs
crates/engine-rt/tests/: queue.rs
crates/harmoniq-app/: Cargo.toml
crates/harmoniq-app/src/: app.rs  audio.rs  commands.rs  engine_bridge.rs  external_plugins.rs  lib.rs  main.rs  midi.rs  plugin_host.rs  typing_keyboard.rs
crates/harmoniq-app/src/config/: mod.rs  qwerty.rs
crates/harmoniq-app/src/core/: mod.rs  plugin_registry.rs  plugin_scanner.rs
crates/harmoniq-app/src/midi/: mod.rs  qwerty.rs
crates/harmoniq-app/src/mixer/: mod.rs  model.rs  widgets.rs
crates/harmoniq-app/src/rt/: mod.rs  rt_event.rs
crates/harmoniq-app/src/runtime/: bus.rs  frame_pacing.rs  midi_service.rs  mod.rs  tick.rs
crates/harmoniq-app/src/state/: session.rs
crates/harmoniq-app/src/ui/: audio_settings.rs  browser.rs  channel_rack.rs  command_dispatch.rs  commands.rs  config.rs  console.rs  event_bus.rs  floating.rs  focus.rs  inspector.rs  launcher.rs  layout.rs  menu.rs  menu_bar.rs  menu_plugins.rs  metrics_view.rs  mixer.rs  mod.rs  notifications.rs  piano_roll.rs  playlist.rs  plugin_manager.rs  sequencer.rs  shortcuts.rs  transport.rs  workspace.rs
crates/harmoniq-dsp/: Cargo.toml
crates/harmoniq-dsp/benches/: gain.rs
crates/harmoniq-dsp/src/: biquad.rs  buffer.rs  delay.rs  gain.rs  lib.rs  pan.rs  saturator.rs  simd.rs  smoothing.rs  utils.rs
crates/harmoniq-dsp/tests/: biquad_smoke.rs
crates/harmoniq-engine/: Cargo.toml  build.rs
crates/harmoniq-engine/examples/: generate_golden.rs
crates/harmoniq-engine/src/: api.rs  audio_graph.rs  buffer.rs  buffers.rs  config.rs  cpu_pinning.rs  delay.rs  engine.rs  graph.rs  lib.rs  mixer.rs  mixer_rt.rs  panlaw.rs  plugin.rs  realtime.rs  rt.rs  rt_bridge.rs  scratch.rs  sound_server.rs  time.rs  tone.rs  transport.rs
crates/harmoniq-engine/src/automation/: curve.rs  lane.rs  mod.rs  record.rs
crates/harmoniq-engine/src/backend/: mod.rs  openasio.rs  safety.rs
crates/harmoniq-engine/src/clips/: clip.rs  crossfade.rs  fade.rs  mod.rs  stretch.rs
crates/harmoniq-engine/src/core/: error.rs  mod.rs  state.rs
crates/harmoniq-engine/src/dsp/: engine.rs  events.rs  graph.rs  mod.rs  nodes.rs  params.rs
crates/harmoniq-engine/src/host/: mod.rs
crates/harmoniq-engine/src/ipc/: bus.rs  mod.rs
crates/harmoniq-engine/src/media/: loader.rs
crates/harmoniq-engine/src/mixer/: api.rs  control.rs  levels.rs  mod.rs  rt_api.rs
crates/harmoniq-engine/src/nodes/: clap_node.rs  gain.rs  mod.rs  noise.rs  sine.rs
crates/harmoniq-engine/src/project/: load.rs  migrate.rs  mod.rs  save.rs  schema.rs
crates/harmoniq-engine/tests/: alloc_guard.rs  asio_rt.rs  clips_crossfade.rs  command_bus.rs  dsp_graph.rs  dsp_latency_alignment.rs  golden_render.rs  idle_cpu.rs  mixer_routing.rs  openasio_smoke.rs  pdc_align.rs  project_recovery.rs  render_offline.rs  rt_parallel.rs  timeline_render.rs  transport_click.rs  ultra_headless.rs
crates/harmoniq-graph/: Cargo.toml
crates/harmoniq-graph/src/: lib.rs
crates/harmoniq-host/: Cargo.toml
crates/harmoniq-host-clap/: Cargo.toml
crates/harmoniq-host-clap/src/: broker.rs  cache.rs  host.rs  ipc.rs  lib.rs
crates/harmoniq-host-clap/tests/: broker.rs
crates/harmoniq-host-vst3/: Cargo.toml
crates/harmoniq-host-vst3/src/: adapter.rs  broker.rs  host.rs  ipc.rs  lib.rs  pdc.rs  ring.rs  window.rs
crates/harmoniq-host-vst3/tests/: mock_adapter.rs
crates/harmoniq-host/src/: lib.rs
crates/harmoniq-mixer/: Cargo.toml
crates/harmoniq-mixer/src/: lib.rs  rt.rs  state.rs
crates/harmoniq-pianoroll/: Cargo.toml
crates/harmoniq-pianoroll/src/: controller_lanes.rs  lib.rs  model.rs  state.rs  theme.rs  tools.rs  transport.rs
crates/harmoniq-playlist/: Cargo.toml
crates/harmoniq-playlist/src/: lib.rs  model.rs  state.rs  ui.rs
crates/harmoniq-plugin-bridge/: Cargo.toml
crates/harmoniq-plugin-bridge/src/: audio_ring.rs  backend_clap.rs  ipc.rs  lib.rs  main.rs  server.rs
crates/harmoniq-plugin-host/: Cargo.toml
crates/harmoniq-plugin-host/src/: audio_buffer.rs  discovery.rs  editor.rs  error.rs  host.rs  lib.rs  parameters.rs
crates/harmoniq-plugin-scanner/: Cargo.toml
crates/harmoniq-plugin-scanner/src/: lib.rs  main.rs  probe.rs  scan.rs
crates/harmoniq-plugin-sub808/: Cargo.toml
crates/harmoniq-plugin-sub808/src/: lib.rs  ui.rs  voice.rs
crates/harmoniq-plugins/: Cargo.toml
crates/harmoniq-plugins/src/: dynamics.rs  editors.rs  effects.rs  generators.rs  instruments.rs  lib.rs
crates/harmoniq-rack/: Cargo.toml
crates/harmoniq-rack/src/: channel.rs  commands.rs  convert.rs  lib.rs  pattern.rs  schedule.rs  state.rs
crates/harmoniq-ui/: Cargo.toml
crates/harmoniq-ui/src/: grand_piano_clap.rs  lib.rs  mixer_skin.rs  overlay.rs  parametric_eq.rs  perf_hud.rs  theme.rs  widget_framework.rs  widgets.rs
crates/harmoniq-utils/: Cargo.toml
crates/harmoniq-utils/src/: db.rs  lib.rs  profiling.rs  rt.rs  time.rs
crates/io-backends/: Cargo.toml
crates/io-backends/src/: cpal_backend.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/westcoast-whine-synth/: Cargo.toml  README.md
crates/westcoast-whine-synth/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: plugin_ipc.rs  project_loader.rs
(+201 files in other folders)
