[workspace]
members = [
    "crates/engine-core",
    "crates/engine-rt",
    "crates/engine-graph",
    "crates/engine-plugin-host",
    "crates/io-backends",
    "crates/server",
    "crates/midi",
    "crates/resample",
    "crates/dsp",
    "crates/simd",
    "crates/portable-simd",
    "crates/harmoniq-plugin-sdk",
    "examples/minimal-host",
    "examples/multi-client-server",
    "crates/harmoniq-app",
    "crates/harmoniq-engine",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
cpal = { version = "0.15", default-features = false }
libloading = "0.8"
log = "0.4"
tracing = "0.1"
"portable-simd" = { path = "crates/portable-simd" }
smallvec = "1.13"
