[workspace]
members = [
    "crates/harmoniq-dsp",
    "crates/harmoniq-engine",
    "crates/harmoniq-app",
    "crates/harmoniq-midi",
    "crates/harmoniq-cli",
    "crates/harmoniq-plugins",
    "crates/harmoniq-plugin-sdk",
    "crates/harmoniq-plugin-host",
    "crates/harmoniq-plugin-db",
    "crates/harmoniq-plugin-scanner",
    "crates/harmoniq-plugin-bridge",
    "crates/harmoniq-plugin-analog",
    "crates/harmoniq-plugin-fm",
    "crates/harmoniq-plugin-wavetable",
    "crates/harmoniq-plugin-sampler",
    "crates/harmoniq-plugin-granular",
    "crates/harmoniq-plugin-additive",
    "crates/harmoniq-plugin-organ-piano",
    "crates/harmoniq-plugin-bass",
    "crates/harmoniq-plugin-westcoast",
    "crates/harmoniq-plugin-sub808",
    "crates/harmoniq-plugin-grand-piano-clap",
    "crates/harmoniq-plugin-parametric-eq",
    "crates/harmoniq-plugin-edison",
    "crates/westcoast-whine-synth",
    "crates/harmoniq-ui",
    "crates/harmoniq-rack",
    "crates/harmoniq-playlist",
    "crates/harmoniq-pianoroll",
    "crates/harmoniq-mixer",
    "crates/harmoniq-rt",
    "crates/harmoniq-host-clap",
    "crates/harmoniq-host-vst3",
    "benches",
    "crates/clap-sys",
    "crates/clap-host",
    "crates/clap-plugin-authoring",
    "crates/clap-scanner",
    "crates/clap-validate",
    "examples/clap-testgain",
    "examples/clap-testsynth",
    "xtask",
# The `westcoast-whine-synth` example depends on system OpenGL/X11 headers.
# Keep it in the workspace, but exclude it from the default build set so
# `cargo build` does not require additional system packages.
]
default-members = [
    "crates/harmoniq-dsp",
    "crates/harmoniq-engine",
    "crates/harmoniq-app",
    "crates/harmoniq-midi",
    "crates/harmoniq-cli",
    "crates/harmoniq-plugins",
    "crates/harmoniq-plugin-sdk",
    "crates/harmoniq-plugin-host",
    "crates/harmoniq-plugin-db",
    "crates/harmoniq-plugin-scanner",
    "crates/harmoniq-plugin-bridge",
    "crates/harmoniq-plugin-analog",
    "crates/harmoniq-plugin-fm",
    "crates/harmoniq-plugin-wavetable",
    "crates/harmoniq-plugin-sampler",
    "crates/harmoniq-plugin-granular",
    "crates/harmoniq-plugin-additive",
    "crates/harmoniq-plugin-organ-piano",
    "crates/harmoniq-plugin-bass",
    "crates/harmoniq-plugin-westcoast",
    "crates/harmoniq-plugin-sub808",
    "crates/harmoniq-plugin-grand-piano-clap",
    "crates/harmoniq-plugin-parametric-eq",
    "crates/harmoniq-plugin-edison",
    "crates/harmoniq-ui",
    "crates/harmoniq-rack",
    "crates/harmoniq-playlist",
    "crates/harmoniq-pianoroll",
    "crates/harmoniq-mixer",
    "crates/harmoniq-rt",
    "crates/harmoniq-host-clap",
    "crates/harmoniq-host-vst3",
    "benches",
    "crates/clap-sys",
    "crates/clap-host",
    "crates/clap-plugin-authoring",
    "crates/clap-scanner",
    "crates/clap-validate",
    "examples/clap-testgain",
    "examples/clap-testsynth",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
ringbuf = "0.3"
once_cell = "1.19"
flacenc = "0.5"
dirs = "5.0"
criterion = "0.5"

[workspace.metadata]
project-description = "Harmoniq Studio - a native, multi-platform digital audio workstation."

[workspace.metadata.harmoniq]
min_rust = "1.76"

[workspace.features]
# Enables the Harmoniq Ultra run profile (OpenASIO + RT hygiene helpers)
ultra = ["harmoniq-engine/ultra", "harmoniq-app/ultra"]
openasio = ["harmoniq-engine/openasio", "harmoniq-app/openasio"]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
version = "0.1.0"
