[package]
name = "clap-sys"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
cty = "0.2"

[build-dependencies]
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
sha2 = "0.10"
walkdir = "2.5"
hex = "0.4"

[features]
default = []
ext_audio_ports = []
ext_note_ports = []
ext_params = []
ext_state = []
ext_gui = []
ext_latency = []
ext_tail = []
ext_timer_support = []
ext_thread_check = []
