[package]
name = "dsp"
version = "0.1.0"
edition = "2021"
description = "SIMD accelerated DSP building blocks for Harmoniq."
license = "GPL-3.0-or-later"

[dependencies]
serde = { workspace = true }
engine-graph = { path = "../engine-graph" }
simd = { path = "../simd" }
smallvec = { workspace = true }
"portable-simd" = { workspace = true }
