[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"
description = "Core services for the Harmoniq real-time audio engine."
license = "GPL-3.0-or-later"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
engine-graph = { path = "../engine-graph" }
engine-rt = { path = "../engine-rt" }
io-backends = { path = "../io-backends" }
midi = { path = "../midi" }
engine-plugin-host = { path = "../engine-plugin-host" }
