[package]
name = "engine-graph"
version = "0.1.0"
edition = "2021"
description = "Pull-based audio graph with sample-accurate automation."
license = "GPL-3.0-or-later"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
engine-rt = { path = "../engine-rt" }

[dev-dependencies]
dsp = { path = "../dsp" }
