[package]
name = "harmoniq-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
harmoniq-engine = { path = "../harmoniq-engine" }
harmoniq-plugins = { path = "../harmoniq-plugins" }
harmoniq-plugin-host = { path = "../harmoniq-plugin-host" }
harmoniq-ui = { path = "../harmoniq-ui" }
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.27", features = ["wgpu"] }
egui_extras = { version = "0.27", features = ["image", "svg"] }
egui_dock = "0.11"
parking_lot.workspace = true
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hound = "3.5"
ctrlc = "3.4"
midir = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flacenc = { version = "0.5", default-features = false }
mp3lame-encoder = { version = "0.2", features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
cpal = "0.16"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.16", features = ["asio"] }

[target.'cfg(target_os = "macos")'.dependencies]
cpal = { version = "0.16" }

[dev-dependencies]
tempfile = "3.10"
