[package]
name = "harmoniq-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
harmoniq-engine = { path = "../harmoniq-engine" }
harmoniq-plugins = { path = "../harmoniq-plugins" }
harmoniq-plugin-host = { path = "../harmoniq-plugin-host" }
harmoniq-ui = { path = "../harmoniq-ui" }
harmoniq-plugin-db = { path = "../harmoniq-plugin-db" }
harmoniq-plugin-scanner = { path = "../harmoniq-plugin-scanner" }
anyhow.workspace = true
clap.workspace = true
eframe = { version = "0.27", default-features = false, features = ["wgpu", "accesskit", "default_fonts", "wayland"] }
egui = { version = "0.27", features = ["serde"] }
egui_extras = { version = "0.27", features = ["image", "svg"] }
egui_dock = { version = "0.12", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
parking_lot.workspace = true
crossbeam-channel = "0.5"
crossbeam-queue.workspace = true
once_cell.workspace = true
ringbuf.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hound = "3.5"
ctrlc = "3.4"
midir = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flacenc = { version = "0.5", default-features = false }
mp3lame-encoder = { version = "0.2", features = ["std"] }
directories = "5"
openasio = { git = "https://github.com/BobTheZombie/OpenASIO-SDK", package = "openasio", optional = true }
dirs.workspace = true
winit = { version = "0.29", default-features = false, features = ["rwh_06", "wayland"] }

[features]
default = []
glow = ["eframe/glow"]
openasio = ["harmoniq-engine/openasio", "dep:openasio"]
ultra = ["harmoniq-engine/ultra", "openasio"]
x11-backend = ["eframe/x11", "winit/x11"]

[target.'cfg(target_os = "linux")'.dependencies]
cpal = "0.16"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.16", features = ["asio"] }

[target.'cfg(target_os = "macos")'.dependencies]
cpal = { version = "0.16" }

[dev-dependencies]
tempfile = "3.10"
