[package]
name = "harmoniq-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
harmoniq-audioio = { path = "../harmoniq-audioio" }
harmoniq-graph = { path = "../harmoniq-graph" }
harmoniq-host = { path = "../harmoniq-host" }
harmoniq-midi = { path = "../harmoniq-midi" }
harmoniq-project = { path = "../harmoniq-project" }
harmoniq-utils = { path = "../harmoniq-utils" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
