[package]
name = "harmoniq-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
parking_lot.workspace = true
tracing = "0.1"
crossbeam = "0.8"
rayon = "1.8"
petgraph = "0.6"
ringbuf = "0.3"
harmoniq-dsp = { path = "../harmoniq-dsp" }
arrayvec = "0.7"
cpal = { version = "0.16", optional = true }
openasio = { git = "https://github.com/BobTheZombie/OpenASIO-SDK", package = "openasio", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = ["native"]
native = ["cpal"]
wasm = []
vst2 = []
vst3 = []
au = []
rtas = []
openasio = ["dep:openasio"]
simd = ["harmoniq-dsp/simd"]
fast-math = ["harmoniq-dsp/fast-math"]
no-denormals = ["harmoniq-dsp/no-denormals"]

[dev-dependencies]
serde_json.workspace = true
rand.workspace = true
