[package]
name = "harmoniq-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
parking_lot.workspace = true
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
crossbeam = "0.8"
rayon = "1.8"
petgraph = "0.6"
harmoniq-dsp = { path = "../harmoniq-dsp" }
harmoniq-rt = { path = "../harmoniq-rt" }
arrayvec = "0.7"
cpal = { version = "0.16", optional = true }
openasio_sdk = { git = "https://github.com/BobTheZombie/OpenASIO-SDK", package = "openasio", optional = true }
crossbeam-queue.workspace = true
crossbeam-channel.workspace = true
ringbuf.workspace = true
rtrb = "0.3"
heapless = "0.8"
core_affinity = { version = "0.8", optional = true }
arc-swap = "1.6"
symphonia = { version = "0.5", features = ["wav", "flac", "aiff", "pcm"] }
hound = "3.5"
flacenc = "0.5"
clap-host = { path = "../clap-host" }
num_cpus = "1.17"
log.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = ["native"]
native = ["cpal"]
wasm = []
vst2 = []
vst3 = []
au = []
rtas = []
openasio_gpl = ["dep:openasio_sdk"]
openasio = ["openasio_gpl"]
simd = ["harmoniq-dsp/simd"]
fast-math = ["harmoniq-dsp/fast-math"]
no-denormals = ["harmoniq-dsp/no-denormals"]
ultra = ["native", "openasio_gpl", "no-denormals", "core_affinity"]
fuzzing = []
mixer_api = []
clap_host = []

[dev-dependencies]
serde_json.workspace = true
rand.workspace = true
tempfile = "3.10"
proptest = "1.4"
