[package]
name = "harmoniq-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
harmoniq-utils = { path = "../harmoniq-utils" }
smallvec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true }
