[package]
name = "harmoniq-host-vst3"
edition.workspace = true
license.workspace = true
version.workspace = true

authors = ["Harmoniq Studio Contributors"]

[lib]
name = "harmoniq_host_vst3"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
rand.workspace = true
ringbuf.workspace = true
once_cell.workspace = true

bincode = "1.3"
memmap2 = "0.9"
os_pipe = "1.1"
tempfile = "3.10"
walkdir = "2.5"
notify = { version = "6.1", optional = true }
tracing = "0.1"

[features]
default = []
watch = ["notify"]

