[package]
name = "harmoniq-mixer"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "RT-safe, lock-free stereo mixer + egui UI for Harmoniq Studio"
publish = false

[features]
default = []
egui = ["dep:egui", "dep:harmoniq-ui"]
persistence = ["serde", "serde_json"]
demo-app = ["egui", "dep:eframe"]

[dependencies]
atomic_float = "1.1"
arc-swap = "1.7"
ringbuf = "0.3"
egui = { version = "0.27", optional = true }
harmoniq-ui = { path = "../harmoniq-ui", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
eframe = { version = "0.27", optional = true }

[package.metadata.docs.rs]
features = ["egui"]
