[package]
name = "harmoniq-pianoroll"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High performance piano roll editor for Harmoniq Studio"
publish = false

[features]
default = []
demo-app = ["eframe"]
persistence = ["serde", "serde_json"]

[dependencies]
egui = "0.27"
epaint = "0.27"
eframe = { version = "0.27", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = "1"
smallvec = "1"

[dev-dependencies]
rand = "0.8"
