[package]
name = "harmoniq-playlist"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Harmoniq Studio Contributors"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
egui = { version = "0.27", features = ["serde"] }
rand.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
