[package]
name = "harmoniq-plugin-bridge"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Harmoniq Studio Contributors"]

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
