[package]
name = "harmoniq-plugin-sub808"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Harmoniq Studio"]
description = "808-style sub-bass synth (CLAP) for Harmoniq Studio"
publish = false

[lib]
crate-type = ["cdylib"] # needed for CLAP/VST3 export

[features]
default = ["editor"]
editor = ["nih_plug_egui"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", package = "nih_plug_egui", optional = true }

# small math helpers; avoid std trig in realtime
fastapprox = "0.3"

[package.metadata.nih-plug]
name = "Harmoniq Sub808"
vendor = "Harmoniq"
url = "https://github.com/BobTheZombie/Harmoniq-Studio"
version = "0.1.0"
clap_target = true
presets = []

