[package]
name = "harmoniq-plugins"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
harmoniq-engine = { path = "../harmoniq-engine" }
harmoniq-plugin-sdk = { path = "../harmoniq-plugin-sdk" }
anyhow.workspace = true
serde.workspace = true
rand.workspace = true
symphonia = { version = "0.5", features = ["wav", "flac", "mp3"] }
async-fs = "1.6"
hound = "3.5"
