[package]
name = "harmoniq-rack"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Harmoniq Studio Contributors"]

[dependencies]
egui = "0.28"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
persistence = ["serde", "serde_json"]
