[package]
name = "harmoniq-ui"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
egui = "0.27"
egui_extras = "0.27"
harmoniq-plugins = { path = "../harmoniq-plugins" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
