[package]
name = "io-backends"
version = "0.1.0"
edition = "2021"
description = "Audio and MIDI IO backends for Harmoniq."
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
cpal = { workspace = true, optional = true }
engine-rt = { path = "../engine-rt" }
tracing = { workspace = true }
log = { workspace = true }

[features]
default = []
cpal = ["dep:cpal"]
