[package]
name = "westcoast-whine-synth"
version = "0.1.0"
edition = "2021"
authors = ["Harmoniq Studio AI"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", package = "nih_plug_egui" }
egui_plot = "0.31"
hound = { version = "3.5", optional = true }

[features]
default = []
demo-render = ["hound"]

[package.metadata.bundle]
name = "WestCoast Whine Synth"
identifier = "westcoast_whine"
